--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,14 +82,12 @@
             </div>
         </nav>
       </div>
-      <!--<div class="d-flex bd-hightlight">-->
-        <!--<div class="flex-grow-1 bd-hightlight pl-4">-->
-          <div class="pl-4">
+      <div class="row">
+        <div class="pl-4">
           <%= render partial: 'layouts/flash_notice' %>
-          <p class="notice"><% notice %></p>
+          <p class="notice m-0"><% notice %></p>
         </div>
-        <!--検索窓-->
-        <!--<div class="search-form col-3 py-1 px-1 my-2 mr-3 ml-auto bd-hightlight border border-secondary">-->
+        <% if user_signed_in? %><!--検索窓-->
           <div class="search-form col-xs-7 col-sm-6 col-md-5 col-lg-4 py-1 px-1 my-2 mr-3 ml-auto  border border-secondary">
           <%= form_tag({controller:"public/posts", action:"index"}, method: :get) do %>
             <%= text_field_tag( "search","",{ placeholder: "投稿をキーワードで検索", class: "p-0 col-11", style: "border: none" }) %>
@@ -97,8 +95,18 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             <% end %>
           <% end %>
-        </div>
-        <!------->
+          </div>
+        <% elsif admin_signed_in? %>
+          <div class="search-form col-xs-7 col-sm-6 col-md-5 col-lg-4 py-1 px-1 my-2 mr-3 ml-auto  border border-secondary">
+          <%= form_tag({controller:"admin/users", action:"index"}, method: :get) do %>
+            <%= text_field_tag( "search","",{ placeholder: "ユーザーをキーワードで検索", class: "p-0 col-11", style: "border: none" }) %>
+              <%= button_tag type: 'submit', class: 'btn btn-outline-info p-0', style: "border: none" do %>
+              <i class="fa-solid fa-magnifying-glass"></i>
+            <% end %>
+          <% end %>
+          </div>
+        <% else %>
+        <% end %>
       </div>
       </div>
     </header>
