--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -11,7 +11,13 @@
 
   <div class="col-md-9 col-12">
     <div class="d-flex justify-content-center">
-      <div class="h5">すべての投稿</div>
+      <div class="h5">
+        <% if params[:tag_ids].present? %>
+        <% elsif params[:search].present? %>
+        <% else %>
+          すべての投稿
+        <% end %>
+      </div>
     </div>
     <div>
       <% @posts.each do |post| %>
@@ -23,7 +29,10 @@
     </div>
 
     <div class="d-flex justify-content-center">
+      <% if params[:tag_ids].present? %>
+      <% else %>
       <div><%= paginate @posts %></div>
+      <% end %>
     </div>
 
   </div>
