--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -18,7 +18,7 @@
       <div class="border border-info m-3 py-3 px-2">
         <div class="d-flex bd-hightlight">
           <div class="mr-auto bd-hightlight">
-            <%= link_to '削除', admin_post_path(post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger" %>
+            <%= link_to '削除', admin_post_path(post), method: :delete, class: "delete-btn btn btn-outline-danger" %>
           </div>
 
         <%= render partial: 'common_post',locals: { post: post } %>
