--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -30,6 +30,9 @@
       </div>
     <% end %>
   </div>
+    <div class="d-flex justify-content-center my-5">
+      <div><%= link_to 'ユーザーページに戻る',admin_user_path(@user), class: 'btn btn-outline-success mr-3' %></div>
+    </div>
     <div class="d-flex justify-content-center">
       <div><%= paginate @posts %></div>
     </div>
