[fix]public post new ラジオボタンチェック時の背景色変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,11 @@
   display: none;
 }
 
+.achivement-btn input:checked + .icon {
+  background: #02beac4d;
+}
+
+
 .simple-calendar {
   .day {
     height: 15px;
