--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -12,8 +12,10 @@
   <div class="col-md-9 col-12">
     <div class="d-flex justify-content-center">
       <div class="h5">
-        <% if params[:tag_ids].present? %>
+        <% if @selects.present? %>
+          <%= @name %>
         <% elsif params[:search].present? %>
+          「<%= params[:search] %>」を含む投稿
         <% else %>
           すべての投稿
         <% end %>
@@ -29,10 +31,7 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <% if params[:tag_ids].present? %>
-      <% else %>
       <div><%= paginate @posts %></div>
-      <% end %>
     </div>
 
   </div>
