[fix]public postコントローラー　タグ検索記述

--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -13,7 +13,7 @@
     <div class="d-flex justify-content-center">
       <div class="h5">
         <% if @selects.present? %>
-          <%= @name %>
+          検索結果
         <% elsif params[:search].present? %>
           「<%= params[:search] %>」を含む投稿
         <% else %>
