--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,11 +1,10 @@
 <div class="row">
+
   <!--サイドバー-->
   <div class="col-3">
-    <div class="border-bottom border-info pb-3 mb-5">
-      <%= form_tag({controller:"posts",action:"index"}, method: :get) do %>
+      <%= form_tag(admin_posts_index_path, method: :get) do %>
         <%= render partial: 'layouts/tag_search' %>
       <% end %>
-    </div>
   </div>
   <!---->
 
@@ -13,6 +12,7 @@
   <div class="d-flex justify-content-center">
     <div class="h5"><%= @user.nickname %> さんの投稿一覧</div>
   </div>
+
   <div>
     <% @posts.each do |post| %>
       <div class="border border-info m-3 py-3 px-2">
@@ -30,11 +30,14 @@
       </div>
     <% end %>
   </div>
+
     <div class="d-flex justify-content-center my-5">
       <div><%= link_to 'ユーザーページに戻る',admin_user_path(@user), class: 'btn btn-outline-success mr-3' %></div>
     </div>
+
     <div class="d-flex justify-content-center">
       <div><%= paginate @posts %></div>
     </div>
+
   </div>
 </div>
