--- a/app/views/layouts/_tag_search.html.erb
+++ b/app/views/layouts/_tag_search.html.erb
@@ -6,7 +6,7 @@
 　 </div>
   <div class="form-inline ">
 　  <% Tag.all.each do |tag| %>
-  　 <div class=""><%= check_box :tag_ids, tag.name %><%= tag.name %></div>
+  　 <div><%= check_box :tag_ids, tag.name %><%= tag.name %></div>
 　  <% end %>
 　</div>
 </div>
