--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -15,7 +15,13 @@
     </div>
 
     <div class="d-flex justify-content-center border-top border-info">
-      <div class="h5 pt-4">すべてのトピック</div>
+      <div class="h5 pt-4">
+        <% if @selects.present? %>
+          タグ検索結果
+        <% else %>
+          すべてのトピック
+        <% end %>
+      </div>
     </div>
 
     <% @topics.each do |topic| %>
@@ -34,7 +40,7 @@
               <div class="flex-grow-1 bd-hightlight">
                 <% topic.tags.each do |tag| %>
                   # <%= tag.name %>
-                 <% end %>
+                <% end %>
               </div>
             </div>
           <% end %>
