--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="h6">新規登録</div>
   </div>
 
-<div class="col-6 mx-auto border border-info">
+<div class="col-6 mx-auto border border-info mb-5">
     <%= form_with model: @user, url: user_registration_path do |f| %>
       <div class="field my-4">
         <%= f.label :ニックネーム, class:'h6' %><br />
@@ -29,7 +29,10 @@
     <% end %>
     <div class="h6 py-1 d-flex flex-column">
       <div class="pb-2"><b>◇既に会員登録をされている方へ◇</b></div>
-      <div class="pb-2">　　　　<u>こちら</u> からログインできます </div>
+      <div class="pb-2">
+        <%= link_to "こちら", new_user_session_path, class: 'ml-4' %>
+        からログインできます
+      </div>
     </div>
   </div>
 
