--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -18,7 +18,7 @@
     <div class="border border-primary my-4 p-4 back-fish">
       <div class="h5 text-primary">現在の目標</div>
       <div class="d-flex bd-highlight py-2">
-        <div class="bd-highlight text-info">最終目標　　：　</div>
+        <div class="bd-highlight col-2 px-0  text-info">最終目標</div>
         <div class="bd-highlight">
           <% if @goal.present? %>
             <%= @goal.title %>
@@ -26,7 +26,7 @@
             マイページで目標を設定しましょう
           <% end %>
           </div>
-        <div class="bd-highlight ml-auto">
+        <div class="bd-highlight ml-auto col-2 pl-4 px-0">
           <% if @goal.present? %>
             <span>
               <%= link_to '完了',public_goal_path(@goal), method: :patch, class: "btn btn-outline-danger" %>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="d-flex bd-highlight py-2">
-        <div class="bd-highlight text-info">今月の目標　：　</div>
+        <div class="bd-highlight col-2 px-0 text-info">今月の目標</div>
         <div class="bd-highlight">
           <% if @objective_month.present? %>
             <%= @objective_month.title %>
@@ -46,7 +46,7 @@
             まずは最終目標を設定しましょう
           <% end %>
         </div>
-        <div class="bd-highlight ml-auto">
+        <div class="bd-highlight ml-auto col-4 pl-4 pr-0">
           <% if @objective_month.present? %>
             <% if @objective_month.did_it == "" && @objective_month.could_not == "" %>
               <span><%= link_to '振り返る',edit_public_objective_path(@objective_month), class: "btn btn-outline-success" %></span>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="d-flex bd-highlight py-2">
-        <div class="bd-highlight text-info">今週の目標　：　</div>
+        <div class="bd-highlight col-2 px-0  text-info">今週の目標</div>
         <div class="bd-highlight">
           <% if @objective_week.present? %>
             <%= @objective_week.title %>
@@ -70,22 +70,22 @@
             まずは最終目標を設定しましょう
           <% end %>
         </div>
-        <div class="bd-highlight ml-auto">
+        <div class="bd-highlight ml-auto col-4 pl-4 pr-0">
           <% if @objective_week.present? %>
             <% if @objective_week.did_it == "" && @objective_week.could_not == "" %>
-              <span><%= link_to '振り返る',edit_public_objective_path(@objective_week), class: "btn btn-outline-success" %></span>
+              <span class=""><%= link_to '振り返る',edit_public_objective_path(@objective_week), class: "btn btn-outline-success" %></span>
             <% else %>
             <% end %>
           <% end %>
           <% if @goal.present? %>
-            <span><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></span>
+            <span class=""><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></span>
           <% end %>
         </div>
       </div>
 
       <div class="d-flex bd-highlight py-2">
         <% if @objective_day.present? %>
-          <div class="bd-highlight text-info"><%= @objective_day.created_at.since(1.days).strftime('%m/%d') %>の目標 ：　</div>
+          <div class="bd-highlight col-2 px-0  text-info"><%= @objective_day.created_at.since(1.days).strftime('%m/%d') %>の目標</div>
           <div class="bd-highlight">
             <%= @objective_day.tomorrow_objective %>
           </div>
@@ -97,9 +97,8 @@
     <% if @goal.present? %>
       <div class="border border-info mt-5 p-4 back-fish">
         <div class="text-primary h5 pb-3">中期目標一覧</div>
-        <div class="d-flex bd-highlight">
-          <div class="bd-highlight text-info">月の目標</div>
-          <div class="bd-highlight flex-grow-1">
+          <div class="text-info">月の目標</div>
+          <div class="">
             <div class="pl-4 overflow-auto"  style="height:150px;">
               <% @objectives_months.each do |month| %>
                 <i class="fa-solid fa-fire-flame-curved"></i> <%= month.title %><br>
@@ -108,10 +107,8 @@
               <% end %>
             </div>
           </div>
-        </div>
-        <div class="d-flex bd-highlight mt-3">
-          <div class="bd-highlight text-info">週の目標</div>
-          <div class="bd-highlight flex-grow-1">
+          <div class="text-info">週の目標</div>
+          <div class="">
             <div class="pl-4 overflow-auto"  style="height:150px;">
               <% @objectives_weeks.each do |week| %>
                 <i class="fa-solid fa-fire-flame-curved"></i> <%= week.title %><br>
@@ -120,7 +117,6 @@
               <% end %>
             </div>
           </div>
-        </div>
       </div>
     <% end %>
 
