--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -17,27 +17,27 @@
 <!--現在の目標-->
     <div class="border border-primary my-4 p-4 back-fish">
       <div class="h5 text-primary">現在の目標</div>
-      <div class="d-flex bd-highlight py-2">
-        <div class="bd-highlight col-2 px-0  text-info">最終目標</div>
-        <div class="bd-highlight">
+      <div class="row py-2 px-3">
+        <div class="col-2 px-0  text-info">最終目標</div>
+        <div class="col-8">
           <% if @goal.present? %>
             <%= @goal.title %>
           <% else %>
             マイページで目標を設定しましょう
           <% end %>
           </div>
-        <div class="bd-highlight ml-auto col-2 pl-4 px-0">
+        <div class="col-2 d-flex justify-content-end">
           <% if @goal.present? %>
-            <span>
+            <div>
               <%= link_to '完了',public_goal_path(@goal), method: :patch, class: "btn btn-outline-danger" %>
-            </span>
+            </div>
           <% end %>
         </div>
       </div>
 
-      <div class="d-flex bd-highlight py-2">
-        <div class="bd-highlight col-2 px-0 text-info">今月の目標</div>
-        <div class="bd-highlight">
+      <div class="row py-2 px-3">
+        <div class="col-2 px-0 text-info">今月の目標</div>
+        <div class="col-6">
           <% if @objective_month.present? %>
             <%= @objective_month.title %>
           <% elsif @goal.present? %>
@@ -46,22 +46,22 @@
             まずは最終目標を設定しましょう
           <% end %>
         </div>
-        <div class="bd-highlight ml-auto col-4 pl-4 pr-0">
+        <div class="col-4 d-flex justify-content-end">
           <% if @objective_month.present? %>
             <% if @objective_month.did_it == "" && @objective_month.could_not == "" %>
-              <span><%= link_to '振り返る',edit_public_objective_path(@objective_month), class: "btn btn-outline-success" %></span>
+              <div><%= link_to '振り返る',edit_public_objective_path(@objective_month), class: "btn btn-outline-success" %></div>
             <% else %>
             <% end %>
           <% end %>
           <% if @goal.present? %>
-            <span><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></span>
+            <div><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></div>
           <% end %>
         </div>
       </div>
 
-      <div class="d-flex bd-highlight py-2">
-        <div class="bd-highlight col-2 px-0  text-info">今週の目標</div>
-        <div class="bd-highlight">
+      <div class="row py-2 px-3">
+        <div class="col-2 px-0  text-info">今週の目標</div>
+        <div class="col-6">
           <% if @objective_week.present? %>
             <%= @objective_week.title %>
           <% elsif @goal.present? %>
@@ -70,15 +70,15 @@
             まずは最終目標を設定しましょう
           <% end %>
         </div>
-        <div class="bd-highlight ml-auto col-4 pl-4 pr-0">
+        <div class="col-4 d-flex justify-content-end">
           <% if @objective_week.present? %>
             <% if @objective_week.did_it == "" && @objective_week.could_not == "" %>
-              <span class=""><%= link_to '振り返る',edit_public_objective_path(@objective_week), class: "btn btn-outline-success" %></span>
+              <div class=""><%= link_to '振り返る',edit_public_objective_path(@objective_week), class: "btn btn-outline-success" %></div>
             <% else %>
             <% end %>
           <% end %>
           <% if @goal.present? %>
-            <span class=""><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></span>
+            <div class=""><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></div>
           <% end %>
         </div>
       </div>
