--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
     <%= csp_meta_tag %>
 
     <!--<= favicon_link_tag('favicon.ico.png') %>-->
-    <link href="<%= image_path("favicon.ico") %>" rel="shortcut icon" />
+    <%= favicon_link_tag %>
+    <!--<link href="<= image_path("favicon.ico") %>" rel="shortcut icon" />-->
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
