--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -83,10 +83,10 @@
         </div>
       </div>
 
-      <div class="d-flex bd-highlight py-2">
+      <div class="row py-2 px-3">
         <% if @objective_day.present? %>
-          <div class="bd-highlight col-2 px-0  text-info"><%= @objective_day.created_at.since(1.days).strftime('%m/%d') %>の目標</div>
-          <div class="bd-highlight">
+          <div class="col-2 px-0  text-info"><%= @objective_day.created_at.since(1.days).strftime('%m/%d') %>の目標</div>
+          <div class="col-10">
             <%= @objective_day.tomorrow_objective %>
           </div>
         <% end %>
