--- a/app/views/public/posts/user_index.html.erb
+++ b/app/views/public/posts/user_index.html.erb
@@ -19,6 +19,7 @@
     </div>
 
     <div>
+      <% if @user == @current_user %>
         <% @posts.each do |post| %>
           <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: @user, current_user: @current_user }  %>
           <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
@@ -26,7 +27,15 @@
         <div class="d-flex justify-content-center">
           <div><%= paginate @posts %></div>
         </div>
+      <% else %>
+        <% @posts_released.each do |post| %>
+          <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: @user, current_user: @current_user }  %>
+          <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
+        <% end %>
+        <div class="d-flex justify-content-center">
+          <div><%= paginate @posts_released %></div>
         </div>
+      <% end %>
     </div>
 
   </div>
