[fix]いいね　公開編集制限

--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -42,7 +42,7 @@
 
     <div>
       <% @favorite_posts.each do |post| %>
-        <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: @user, current_user: @current_user }  %>
+        <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: @other_user, current_user: @user }  %>
         <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
       <% end %>
     </div>
