--- a/app/views/public/objectives/new.html.erb
+++ b/app/views/public/objectives/new.html.erb
@@ -10,22 +10,22 @@
   <div class="m-3">
     <div class="d-flex bd-highlight">
       <div class="text-info h5 bd-highlight pt-1">今月の目標　</div>
-      <div class="col-7 bd-highlight mx-3"><%= f.text_field :title, class: 'p-1 col-12', placeholder:"例）参考書を1冊3周する！" %></div>
+      <div class="col-8 bd-highlight flex-grow-1"><%= f.text_field :title, class: 'p-1 col-12', placeholder:"例）参考書を1冊3周する！" %></div>
       <%= f.hidden_field :goal_id, :value => @goal.id %>
       <%= f.hidden_field :period_genre, :value => [:month] %>
-      <div class="bd-highlight ml-auto"><%= f.submit 'この目標にする', class: 'btn btn-info' %></div>
+      <div class="bd-highlight"><%= f.submit 'この目標にする', class: 'btn btn-info' %></div>
     </div>
   </div>
 <% end %>
 
 <%= form_with model: @objective, url: public_objectives_path, method: :post do |f| %>
-  <div class="m-3">
+  <div class="m-3 mt-5">
     <div class="d-flex bd-highlight">
       <div class="text-info h5 bd-highlight pt-1"> 今週の目標　</div>
-      <div class="col-7 bd-highlight mx-3"><%= f.text_field :title, class: 'p-1 col-12', placeholder:"例）英単語150語覚える！" %></div>
+      <div class="col-8 bd-highlight flex-grow-1"><%= f.text_field :title, class: 'p-1 col-12', placeholder:"例）英単語150語覚える！" %></div>
       <%= f.hidden_field :goal_id, :value => @goal.id %>
       <%= f.hidden_field :period_genre, :value => [:week] %>
-      <div class="bd-highlight ml-auto"><%= f.submit 'この目標にする', class: 'btn btn-info' %></div>
+      <div class="bd-highlight"><%= f.submit 'この目標にする', class: 'btn btn-info' %></div>
     </div>
   </div>
 <% end %>
