--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -19,16 +19,16 @@
 	  </ol>
 	<div class="carousel-inner">
 		 <div class="carousel-item active">
-			 <img class="d-block w-100" src="/assets/about01.png" alt="First slide">
+			 <img class="d-block w-100" src="/about01.png" alt="First slide">
 		 </div>
 		 <div class="carousel-item">
-			 <img class="d-block w-100" src="/assets/about02.png" alt="Second slide">
+			 <img class="d-block w-100" src="/about02.png" alt="Second slide">
 		 </div>
 		 <div class="carousel-item">
-			 <img class="d-block w-100" src="/assets/about03.png" alt="Third slide">
+			 <img class="d-block w-100" src="/about03.png" alt="Third slide">
 		 </div>
 		 <div class="carousel-item">
-			 <img class="d-block w-100" src="/assets/about04.png" alt="4th slide">
+			 <img class="d-block w-100" src="/about04.png" alt="4th slide">
 		 </div>
 	</div>
 	<a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
