--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -2,6 +2,8 @@
   <div class="col-12 h4 d-flex justify-content-center">
     <div class="h6">新規登録</div>
   </div>
+  
+ <!--< if User.error-->
 
 <div class="col-6 mx-auto border border-info mb-5">
     <%= form_with model: @user, url: user_registration_path do |f| %>
