--- a/app/views/layouts/post_partial/_comment_post.html.erb
+++ b/app/views/layouts/post_partial/_comment_post.html.erb
@@ -18,8 +18,12 @@
       <div class="border-bottom border-info my-3 mx-5">
         <div class="d-flex bd-hightlight">
           <div class="bd-hightlight">
-            <%= image_tag post_comment.user.get_icon_image(30,30), class: 'border rounded-circle' %>
-              <span class="border-bottom border-dark"><%= post_comment.user.nickname %></span>
+            <% if topic_comment.user.is_deleted == false %>
+              <%= image_tag post_comment.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+                <span class="border-bottom border-dark"><%= post_comment.user.nickname %></span>
+            <% else %>
+              退会済みのユーザー
+            <% end %>
           </div>
           <div class="bd-hightlight text-secondary ml-3">
             <%= post_comment.created_at.strftime('%Y/%m/%d %H:%M') %>
