--- a/app/views/layouts/post_partial/_comment_post.html.erb
+++ b/app/views/layouts/post_partial/_comment_post.html.erb
@@ -18,7 +18,7 @@
       <div class="border-bottom border-info my-3 mx-5">
         <div class="d-flex bd-hightlight">
           <div class="bd-hightlight">
-            <% if topic_comment.user.is_deleted == false %>
+            <% if _comment.user.is_deleted == false %>
               <%= image_tag post_comment.user.get_icon_image(30,30), class: 'border rounded-circle' %>
                 <span class="border-bottom border-dark"><%= post_comment.user.nickname %></span>
             <% else %>
