--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,13 @@
 <div class="back-fish mb-3">
   <div class="col-9 mx-auto pb-5">
     <div class="d-flex justify-content-center">
-      <div class="h5">すべてのユーザー</div>
+      <div class="h5">
+        <% if params[:search].present? %>
+          「<%= params[:search] %>」を含むユーザー
+        <% else %>
+          すべてのユーザー
+        <% end %>
+      </div>
     </div>
     <div>
       <% @users.each do |user| %>
