--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
               <%= link_to public_root_path do %>
                 <%= image_tag 'logo.png', size: '200x100' %>
               <% end %>
-            <% elsif %>
+            <% elsif admin_signed_in? %>
               <%= link_to admin_root_path do %>
                 <%= image_tag 'logo.png', size: '200x100' %>
               <% end %>
