[fix]新規登録バリデーションエラー時のURL修正

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -39,5 +39,9 @@
     </div>
   </div>
 
+  <% if @user.errors.any? %>
+    <%= javascript_pack_tag 'users/signup_render' %>
+  <% end %>
+
 <!--<= render "public/shared/links" %>-->
 </div>
