[fix]新規登録バリデーションエラー時のURL修正

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -40,7 +40,7 @@
   </div>
 
   <% if @user.errors.any? %>
-    <%= javascript_pack_tag 'users/signup_render', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'users/signup_render' %>
   <% end %>
 
 <!--<= render "public/shared/links" %>-->
