[fix]新規登録バリデーションエラー時のURL修正

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -40,7 +40,12 @@
   </div>
 
   <% if @user.errors.any? %>
-    <%= javascript_pack_tag 'users/signup_render' %>
+    <!--<= javascript_pack_tag 'users/signup_render' %>-->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        history.pushState('', '', 'users/sign_up')
+      });
+    </script>
   <% end %>
 
 <!--<= render "public/shared/links" %>-->
