--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -25,27 +25,29 @@
     </div>
 
     <% @topics.each do |topic| %>
-      <% if topic.user.is_deleted == false %>
-        <div class="border-bottom border-info py-2 col-12">
-          <%= link_to public_topic_path(topic), class: 'text-dark mr-auto bd-hightlight' do %>
-            <div class="d-flex bd-hightlight">
-              <div class="bd-hightlight">
+      <div class="border-bottom border-info py-2 col-12">
+        <%= link_to public_topic_path(topic), class: 'text-dark mr-auto bd-hightlight' do %>
+          <div class="d-flex bd-hightlight">
+            <div class="bd-hightlight">
+              <% if topic.user.is_deleted == false %>
                 <%= image_tag topic.user.get_icon_image(30,30), class: 'border rounded-circle' %>
                 <%= topic.user.nickname %>
-              </div>
-              <div class="ml-auto bd-hightlight"><%= topic.created_at.strftime('%Y/%m/%d %H:%M') %></div>
+              <% else %>
+                作成者：退会済みのユーザー
+              <% end %>
             </div>
-            <div class="d-flex bd-hightlight">
-              <div class="bd-hightlight pl-4">【<%= topic.title %>】</div>
-              <div class="flex-grow-1 bd-hightlight">
-                <% topic.tags.each do |tag| %>
-                  # <%= tag.name %>
-                <% end %>
-              </div>
+            <div class="ml-auto bd-hightlight"><%= topic.created_at.strftime('%Y/%m/%d %H:%M') %></div>
+          </div>
+          <div class="d-flex bd-hightlight">
+            <div class="bd-hightlight pl-4">【<%= topic.title %>】</div>
+            <div class="flex-grow-1 bd-hightlight">
+              <% topic.tags.each do |tag| %>
+                # <%= tag.name %>
+              <% end %>
             </div>
-          <% end %>
-        </div>
-      <% end %>
+          </div>
+        <% end %>
+      </div>
     <% end %>
 
     <div class="d-flex justify-content-center">
