[fix]newpost 個別にエラーメッセージ表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,6 +70,10 @@
   border-style: none dashed none none;
 }
 
+.field_with_errors {
+  display: inline;
+}
+
 .top-gradient {
   background: linear-gradient(to right, #fff 50%, #6dc7d6);
 }
