--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,7 +1,7 @@
-<% if object.errors.any? %>
+<% if model.errors.any? %>
    <div class="alert-danger error_message my-0 py-0">
      <ul class="m-0 py-0">
-       <% object.errors.full_messages_for(attribute).each do |message| %>
+       <% model.errors.full_messages_for(attribute).each do |message| %>
          <li><%= message %></li>
        <% end %>
      </ul>
