--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,8 +70,9 @@
   border-style: none dashed none none;
 }
 
-div .field_with_errors {
-  display: contents;
+.field_with_errors {
+  // display: contents;
+  background-color: #70ddef63;
 }
 
 .top-gradient {
