--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,9 @@
   background: #02beac4d;
 }
 
+.field_with_errors {
+  display: contents;
+}
 
 .simple-calendar {
   .day {
@@ -70,10 +73,6 @@
   border-style: none dashed none none;
 }
 
-.field_with_errors {
-  // display: contents;
-  background-color: #70ddef63;
-}
 
 .top-gradient {
   background: linear-gradient(to right, #fff 50%, #6dc7d6);
