--- a/app/views/layouts/_common_user_show.html.erb
+++ b/app/views/layouts/_common_user_show.html.erb
@@ -16,5 +16,5 @@
           <%= image_tag user.get_icon_image(100,100), class: 'border rounded-circle' %>
         </div>
       </div>
-      
-<!--下に</div>があることを確認-->
+
+<%# 下に</div>があることを確認 %>
