--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -8,7 +8,7 @@
    <p>あなたの「続ける」モチベーションの維持に役立ちます。</p>
  </div>
 
-<!--カルーセル-->
+<%# カルーセル %>
 <div class="col-8 mx-auto my-5">
  <div id="carousel-1" class="carousel slide" datainterval="10000">
    <ol class="carousel-indicators">
