--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 
-  <!--サイドバー-->
+  <%# サイドバー %>
   <div class="col-md-3 col-12 mb-5 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
     <%= form_tag({controller:"topics",action:"index"}, method: :get) do %>
