--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,9 +1,10 @@
 <div class="container row">
 
-  <!--サイドバー-->
+  <%# サイドバー %>
   <div class="col-3 mb-5 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
   </div>
+
 
   <div class="col-9">
     <div class="d-flex justify-content-center">
