--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
 
-  <!--サイドバー-->
+  <%# サイドバー %>
   <div class="col-3 mb-5 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user,goal: @goal } %><br>
   </div>
-  <!---->
+
 
   <div class="col-8 my-3">
     <div class="d-flex justify-content-center">
@@ -51,7 +51,6 @@
           <div><%= link_to 'ユーザーの投稿一覧を見る',public_user_posts_path(@user.id), class: 'btn btn-outline-secondary ml-5' %></div>
         </div>
     </div>
-
   </div>
 
 </div>
