--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,45 +1,44 @@
-<div class="">
+<div>
   <div class="col-8 border border-info pt-5 px-5 pb-4 mx-auto my-5 h5">
-   <p><b>宣誓！</b>は目標に向かって頑張るあなたを応援する、</p>
-   <p>[ 進捗管理 × 投稿 ] 型のコミュニティサイトです。</p>
-   <p>同じ目標を持った仲間を見つけて、</p>
-   <p>スタンプやコメントで繋がりましょう！</p>
-   <p>一緒に目標達成を目指すことで、</p>
-   <p>あなたの「続ける」モチベーションの維持に役立ちます。</p>
- </div>
+    <p><b>宣誓！</b>は目標に向かって頑張るあなたを応援する、</p>
+    <p>[ 進捗管理 × 投稿 ] 型のコミュニティサイトです。</p>
+    <p>同じ目標を持った仲間を見つけて、</p>
+    <p>スタンプやコメントで繋がりましょう！</p>
+    <p>一緒に目標達成を目指すことで、</p>
+    <p>あなたの「続ける」モチベーションの維持に役立ちます。</p>
+  </div>
 
-<%# カルーセル %>
-<div class="col-8 mx-auto my-5">
- <div id="carousel-1" class="carousel slide" datainterval="10000">
-   <ol class="carousel-indicators">
-	 	 <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-		  <li data-target="#carousel-1" data-slide-to="1"></li>
-		  <li data-target="#carousel-1" data-slide-to="2"></li>
-		  <li data-target="#carousel-1" data-slide-to="3"></li>
-	  </ol>
-	<div class="carousel-inner">
-		 <div class="carousel-item active">
-			 <%= image_tag 'about01.png' ,class: 'd-block w-100' %>
-		 </div>
-		 <div class="carousel-item">
-			 <%= image_tag 'about02.png' ,class: 'd-block w-100' %>
-		 </div>
-		 <div class="carousel-item">
-			 <%= image_tag 'about03.png' ,class: 'd-block w-100' %>
-		 </div>
-		 <div class="carousel-item">
-			 <%= image_tag 'about04.png' ,class: 'd-block w-100' %>
-		 </div>
-	</div>
-	<a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
-		 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		 <span class="sr-only">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next">
-		 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		 <span class="sr-only">Next</span>
-	</a>
-</div>
-</div>
+  <div class="col-8 mx-auto my-5">
+    <div id="carousel-1" class="carousel slide" datainterval="10000">
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-1" data-slide-to="1"></li>
+        <li data-target="#carousel-1" data-slide-to="2"></li>
+        <li data-target="#carousel-1" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <%= image_tag 'about01.png' ,class: 'd-block w-100' %>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag 'about02.png' ,class: 'd-block w-100' %>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag 'about03.png' ,class: 'd-block w-100' %>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag 'about04.png' ,class: 'd-block w-100' %>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 
 </div>
