--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,4 @@
 <div class="row">
-
   <%# サイドバー %>
   <div class="col-lg-4 col-12 mb-5 pr-4 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
@@ -13,7 +12,6 @@
       今日はどんな一日になりましたか？<br>
       一日を振り返って、達成度を投稿しましょう！
     </div>
-
     <div class="border border-primary my-4 p-4 back-fish">
       <div class="h5 text-primary">現在の目標</div>
       <div class="row py-2 px-3">
@@ -33,7 +31,6 @@
           <% end %>
         </div>
       </div>
-
       <div class="row py-2 px-3">
         <div class="col-2 px-0 text-info">今月の目標</div>
         <div class="col-6">
@@ -57,7 +54,6 @@
           <% end %>
         </div>
       </div>
-
       <div class="row py-2 px-3">
         <div class="col-2 px-0  text-info">今週の目標</div>
         <div class="col-6">
@@ -81,7 +77,6 @@
           <% end %>
         </div>
       </div>
-
       <div class="row py-2 px-3">
         <% if @objective_day.present? %>
           <div class="col-2 px-0  text-info"><%= @objective_day.created_at.since(1.days).strftime('%m/%d') %>の目標</div>
@@ -91,7 +86,6 @@
         <% end %>
       </div>
     </div>
-
     <% if @goal.present? %>
       <div class="border border-info mt-5 p-4 back-fish">
         <div class="text-primary h5 pb-3">中期目標一覧</div>
@@ -117,7 +111,6 @@
           </div>
       </div>
     <% end %>
-
     <div class="border border-success mt-5 p-4">
       <div class="text-success h5 pb-3">タグ新規作成（投稿・トピック共通）</div>
       <div class="d-flex justify-content-center">
@@ -128,5 +121,15 @@
       </div>
     </div>
   </div>
+</div>
 
+<div class="col-12">
+  <h5 class="text-info"><%= @current_user.nickname %>さんの投稿ランキング：いいねTOP3</h5>
+  <div class="row">
+    <% @my_post_favorite_ranks.each.with_index(1) do |post, i| %>
+      <div class ="col-3 border border-info p-2 m-1">
+        第<%= i %>位 : <%= post.body %>
+      </div>
+    <% end %>
+  </div>
 </div>
